# librustcrypticcoin

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: book.yml  ci.yml
components/crypticcoin_address/: Cargo.toml  README.md
components/crypticcoin_address/src/: convert.rs  encoding.rs
components/crypticcoin_address/src/kind/: sprout.rs
components/crypticcoin_encoding/: Cargo.toml  README.md
components/crypticcoin_encoding/src/: lib.rs
components/crypticcoin_note_encryption/: README.md
components/crypticcoin_note_encryption/src/: batch.rs  lib.rs
components/equihash/: Cargo.toml
components/equihash/src/: lib.rs  verify.rs
components/f4jumble/: Cargo.toml  README.md
components/f4jumble/src/: test_vectors.rs  test_vectors_long.rs
components/zcash_address/src/: lib.rs  test_vectors.rs
components/zcash_address/src/kind/: p2pkh.rs  p2sh.rs  sapling.rs  sprout.rs  unified.rs
components/zcash_address/src/kind/unified/: address.rs
components/zcash_address/src/kind/unified/address/: test_vectors.rs
components/zcash_note_encryption/: Cargo.toml
crypticcoin_client_backend/: CHANGELOG.md  Cargo.toml  README.md
crypticcoin_client_backend/examples/: diversify-address.rs
crypticcoin_client_backend/src/: address.rs  data_api.rs  decrypt.rs  encoding.rs  keys.rs  lib.rs  proto.rs  wallet.rs  welding_rig.rs  zip321.rs
crypticcoin_client_backend/src/data_api/: chain.rs  error.rs  wallet.rs
crypticcoin_client_sqlite/: CHANGELOG.md  Cargo.toml  README.md
crypticcoin_client_sqlite/src/: chain.rs  error.rs  lib.rs  wallet.rs
crypticcoin_client_sqlite/src/chain/: init.rs
crypticcoin_client_sqlite/src/wallet/: init.rs  transact.rs
crypticcoin_extensions/: Cargo.toml
crypticcoin_extensions/src/: transparent.rs
crypticcoin_extensions/src/consensus/: transparent.rs
crypticcoin_extensions/src/transparent/: demo.rs
crypticcoin_history/: CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md
crypticcoin_history/examples/: long.rs
crypticcoin_history/examples/lib/: shared.rs
crypticcoin_history/src/: lib.rs  version.rs
crypticcoin_primitives/: CHANGELOG.md  Cargo.toml  README.md
crypticcoin_primitives/benches/: note_decryption.rs  pedersen_hash.rs
crypticcoin_primitives/src/: block.rs  consensus.rs  constants.rs  keys.rs  legacy.rs  lib.rs  memo.rs  merkle_tree.rs  zip32.rs
crypticcoin_primitives/src/constants/: mainnet.rs  regtest.rs  testnet.rs
crypticcoin_primitives/src/extensions/: transparent.rs
crypticcoin_primitives/src/legacy/: keys.rs
crypticcoin_primitives/src/merkle_tree/: incremental.rs
crypticcoin_primitives/src/sapling/: keys.rs  note_encryption.rs  redjubjub.rs
crypticcoin_primitives/src/sapling/pedersen_hash/: test_vectors.rs
crypticcoin_primitives/src/test_vectors/: note_encryption.rs
crypticcoin_primitives/src/transaction/: components.rs  mod.rs  sighash_v4.rs  sighash_v5.rs  txid.rs
crypticcoin_primitives/src/transaction/components/: amount.rs  orchard.rs  sapling.rs  sprout.rs  tze.rs
crypticcoin_primitives/src/transaction/components/sapling/: builder.rs
crypticcoin_primitives/src/transaction/tests/: data.rs
crypticcoin_proofs/: CHANGELOG.md  Cargo.toml  README.md
crypticcoin_proofs/benches/: sapling.rs
crypticcoin_proofs/examples/: download-params.rs  get-params-path.rs
crypticcoin_proofs/src/: circuit.rs  constants.rs  lib.rs  prover.rs
crypticcoin_proofs/src/circuit/: ecc.rs  pedersen_hash.rs  sapling.rs
crypticcoin_proofs/src/circuit/sprout/: mod.rs
crypticcoin_proofs/src/sapling/: mod.rs  prover.rs  verifier.rs
librustcrypticcoin/: README.md
