[workspace]
members = [
    "components/equihash",
    "components/f4jumble",
    "components/crypticcoin_address",
    "components/crypticcoin_encoding",
    "components/crypticcoin_note_encryption",
    "crypticcoin_client_backend",
    "crypticcoin_client_sqlite",
    "crypticcoin_extensions",
    "crypticcoin_history",
    "crypticcoin_primitives",
    "crypticcoin_proofs",
]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io]
crypticcoin_encoding = { path = "components/crypticcoin_encoding" }
crypticcoin_note_encryption = { path = "components/crypticcoin_note_encryption" }
hdwallet = { git = "https://github.com/nuttycom/hdwallet", rev = "576683b9f2865f1118c309017ff36e01f84420c9" }
