[package]
name = "crypticcoin_client_backend"
description = "APIs for creating shielded Zcash light clients"
version = "0.5.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
repository = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.8"
bls12_381 = "0.6"
bs58 = { version = "0.4", features = ["check"] }
base64 = "0.13"
ff = "0.11"
group = "0.11"
hex = "0.4"
hdwallet = { version = "0.3.0", optional = true }
jubjub = "0.8"
log = "0.4"
nom = "7"
percent-encoding = "2.1.0"
proptest = { version = "1.0.0", optional = true }
protobuf = ">=2.20,<2.26" # protobuf 2.26 bumped MSRV to 1.52.1
rand_core = "0.6"
ripemd = { version = "0.1", optional = true }
secp256k1 = { version = "0.20", optional = true }
sha2 = { version = "0.10.1", optional = true }
subtle = "2.2.3"
time = "0.2"
crypticcoin_note_encryption = { version = "0.1", path = "../components/crypticcoin_note_encryption" }
crypticcoin_primitives = { version = "0.5", path = "../crypticcoin_primitives" }

[build-dependencies]
protobuf-codegen-pure = ">=2.20,<2.26" # protobuf 2.26 bumped MSRV to 1.52.1

[dev-dependencies]
gumdrop = "0.8"
rand_xorshift = "0.3"
tempfile = "3.1.0"
crypticcoin_proofs = { version = "0.5", path = "../crypticcoin_proofs" }

[features]
transparent-inputs = ["ripemd", "hdwallet", "sha2", "secp256k1", "crypticcoin_primitives/transparent-inputs"]
test-dependencies = ["proptest", "crypticcoin_primitives/test-dependencies"]

[lib]
bench = false

[badges]
maintenance = { status = "actively-developed" }
