[package]
name = "crypticcoin_client_sqlite"
description = "An SQLite-based Zcash light client"
version = "0.3.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
repository = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.8"
bs58 = { version = "0.4", features = ["check"] }
ff = "0.11"
group = "0.11"
jubjub = "0.8"
protobuf = ">=2.20,<2.26" # protobuf 2.26 bumped MSRV to 1.52.1
rand_core = "0.6"
rusqlite = { version = "0.24", features = ["bundled", "time"] }
secp256k1 = { version = "0.20" }
time = "0.2"
crypticcoin_client_backend = { version = "0.5", path = "../crypticcoin_client_backend" }
crypticcoin_primitives = { version = "0.5", path = "../crypticcoin_primitives" }

[dev-dependencies]
tempfile = "3"
crypticcoin_proofs = { version = "0.5", path = "../crypticcoin_proofs" }

[features]
mainnet = []
test-dependencies = ["crypticcoin_client_backend/test-dependencies"]
transparent-inputs = ["crypticcoin_client_backend/transparent-inputs"]

[lib]
bench = false
