[package]
name = "crypticcoin_address"
description = "Crypticcoin address parsing and serialization"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
]
homepage = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
repository = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.8"
bs58 = { version = "0.4", features = ["check"] }
f4jumble = { version = "0.0", path = "../f4jumble" }
crypticcoin_encoding = { version = "0.0", path = "../crypticcoin_encoding" }

[dev-dependencies]
assert_matches = "1.3.0"
proptest = "1"

[lib]
bench = false
