[package]
name = "crypticcoin_encoding"
description = "Binary encodings used throughout the Crypticcoin ecosystem."
version = "0.0.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
homepage = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
repository = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1"
nonempty = "0.7"

[lib]
bench = false
