[package]
name = "f4jumble"
description = "Implementation of Crypticcoin's F4Jumble algorithm"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
]
homepage = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
repository = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
blake2b_simd = { version = "1", default-features = false }

[dev-dependencies]
proptest = "1"

[features]
default = ["std"]
std = ["blake2b_simd/std"]
