[package]
name = "crypticcoin_note_encryption"
description = "Note encryption for Crypticcoin transactions"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
repository = "https://github.com/crypticcoin-renewed/librustcrypticcoin"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chacha20 = { version = "0.8", default-features = false }
chacha20poly1305 = { version = "0.9", default-features = false }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.2.3", default-features = false }

[dev-dependencies]
ff = { version = "0.11", default-features = false }
crypticcoin_primitives = { version = "0.5", path = "../../crypticcoin_primitives" }
jubjub = "0.8"

[features]
default = ["alloc"]
alloc = []
pre-zip-212 = []

[lib]
bench = false
